Change vite config

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://stevenxngo.github.io/igfollowers",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "build": "tsc && vite build",
