Update portfolio url

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "igfollowers",
   "private": true,
   "version": "0.0.0",
-  "author": "Steven Ngo <steventxngo@gmail.com> (https://personal-portfolio-stevenxngos-projects.vercel.app/)",
+  "author": "Steven Ngo <steventxngo@gmail.com> (https://www.stevenxngo.com/)",
   "homepage": "https://stevenxngo.github.io/igfollowers",
   "type": "module",
   "scripts": {
